--- a/search_system/templates/register.html
+++ b/search_system/templates/register.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Register</h1>
     <form method="POST" action="/register">
-        <div id="form-group"><label>Name:</label><input class="form-control" name="name" type="text" /></div>
         <div id="form-group"><label>Email:</label><input class="form-control" name="email" type="text" /></div>
         <div id="form-group"><label>Username:</label><input class="form-control" name="username" type="text" /></div>
         <div id="form-group"><label>Password:</label><input class="form-control" name="password" type="password" /></div>
-        <div id="form-group"><label>Confirm Password:</label><input class="form-control" name="password2" type="password" /></div><br /><input class="btn btn-primary" type="submit" value="submit" />
+        <br/>
+        <input class="btn btn-primary" type="submit" value="submit" />
     </form>
 </body>
 </html>
