--- a/search_system/templates/search.html
+++ b/search_system/templates/search.html
@@ -11,8 +11,8 @@
     <h1>Search</h1>
     <a href="/logout">Logout</a>
     <a href="/search">search</a>
-    <form method="GET" action="/query">
-        <div id="form-group"><label>Search:</label><input class="form-control" name="search_text" type="text" /></div>
+    <form method="POST" action="/pipe">
+        <div id="form-group"><label>Search:</label><input class="form-control" name="dir" type="text" /></div>
         <input class="btn btn-primary" type="submit" value="submit" />
     </form>
 </body>
