--- a/search_system/templates/login.html
+++ b/search_system/templates/login.html
@@ -9,6 +9,7 @@
 <body>
     <h2>Welcome to Rust Search Engine</h2>
     <h1>Login</h1>
+    <a href="/register">Register</a> <br/>
     <form method="POST" action="/login">
         <div id="form-group"><label>Username:</label><input class="form-control" name="username" type="text" /></div>
         <div id="form-group"><label>Password:</label><input class="form-control" name="password" type="password" /></div><br />
