--- a/search_system/templates/submit_index.html
+++ b/search_system/templates/submit_index.html
@@ -9,10 +9,10 @@
 <body>
     <h2>Welcome to Rust Search Engine!</h2>
     <h1>Search</h1>
-    <a href="/logout">logout</a>
-    <a href="/submit_index">index</a>
-    <form method="POST" action="/search">
-        <div id="form-group"><label>Search:</label><input class="form-control" name="query_terms" type="text" /></div>
+    <a href="/logout">Logout</a>
+    <a href="/search">search</a>
+    <form method="POST" action="/submit_index">
+        <div id="form-group"><label>Search:</label><input class="form-control" name="dir" type="text" /></div>
         <input class="btn btn-primary" type="submit" value="submit" />
     </form>
 </body>
