--- a/search_system/templates/submit_index.html
+++ b/search_system/templates/submit_index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h2>Welcome to Rust Search Engine!</h2>
-    <h1>Search</h1>
+    <h1>Submit Text for Index</h1>
     <a href="/logout">Logout</a>
-    <a href="/search">search</a>
+    <a href="/search">Search</a>
     <form method="POST" action="/submit_index">
-        <div id="form-group"><label>Search:</label><input class="form-control" name="dir" type="text" /></div>
+        <div id="form-group"><label>Submit to Index:</label><input class="form-control" name="dir" type="text" /></div>
         <input class="btn btn-primary" type="submit" value="submit" />
     </form>
 </body>
