--- a/search_system/templates/search.html
+++ b/search_system/templates/search.html
@@ -9,8 +9,8 @@
 <body>
     <h2>Welcome to Rust Search Engine!</h2>
     <h1>Search</h1>
-    <a href="/logout">logout</a>
-    <a href="/submit_index">index</a>
+    <a href="/logout">Logout</a>
+    <a href="/submit_index">Index</a>
     <form method="POST" action="/search">
         <div id="form-group"><label>Search:</label><input class="form-control" name="query_terms" type="text" /></div>
         <input class="btn btn-primary" type="submit" value="submit" />
